<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_openDrawer"
        android:layout_width="@dimen/x_design_50px"
        android:layout_height="@dimen/y_design_50px"
        android:layout_marginLeft="@dimen/x_design_20px"
        android:layout_marginTop="@dimen/y_design_20px"
        android:src="@drawable/category"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/x_d_padding">

        <LinearLayout
            android:layout_width="@dimen/x_design_380px"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_main_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:paddingLeft="@dimen/x_design_15px"
                android:paddingRight="@dimen/x_design_15px"
                android:paddingTop="@dimen/y_design_15px"
                android:paddingBottom="@dimen/y_design_15px"
                android:text="@string/st_main_time"
                android:textColor="@color/c_tv_font_black"
                android:textSize="@dimen/f_main_font_size"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_share_work3"
                android:orientation="vertical"
                android:paddingBottom="@dimen/y_design_30px"
                android:paddingLeft="@dimen/x_d_main_list_padding"
                android:paddingRight="@dimen/x_d_main_list_padding"
                android:paddingTop="@dimen/y_design_30px">

                <EditText
                    android:layout_width="@dimen/design_200px"
                    android:layout_height="@dimen/design_50px"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_station_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_design_55px"
                    tools:text="A0001" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/y_design_10px"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_design_35px"
                    tools:text="2017年10月1日" />

                <TextView
                    android:id="@+id/tv_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/y_design_10px"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_design_35px"
                    tools:text="上午08:30" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="@dimen/x_design_30px"
                        android:layout_height="@dimen/y_design_30px"
                        android:src="@drawable/ic_main_work_card" />

                    <TextView
                        android:id="@+id/tv_main_station_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/x_design_10px"
                        android:text="-"
                        android:textColor="@color/c_tv_font_black" />
                </LinearLayout>


                <TextView
                    android:id="@+id/tv_main_station_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/y_design_20px"
                    android:text="@string/st_main_station_ip"
                    android:textColor="@color/c_tv_font_black"
                    android:textSize="@dimen/text_design_30px"
                    android:visibility="gone" />


                <TextView
                    android:id="@+id/tv_main_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/y_design_20px"
                    android:text="@string/st_main_location"
                    android:textColor="@color/c_tv_font_black"
                    android:textSize="@dimen/f_main_font_size"
                    android:visibility="gone" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/y_design_20px"
                android:background="@drawable/bg_share_work3"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="@dimen/x_design_10px"
                android:paddingRight="@dimen/x_design_10px"
                android:paddingTop="@dimen/y_design_10px"
                android:paddingBottom="@dimen/y_design_10px">


                <ImageView
                    android:id="@+id/iv_main_user_photo"
                    android:layout_width="@dimen/x_design_280px"
                    android:layout_height="@dimen/x_design_280px"
                    android:layout_marginTop="@dimen/y_design_10px"
                    android:src="@drawable/ic_main_user" />

                <LinearLayout
                    android:id="@+id/ll_unlogin_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/y_design_20px"
                        android:text="请登录系统"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_design_40px" />

                    <Button
                        android:id="@+id/btn_scan_code_login"
                        style="@style/login_infor_bt"
                        android:layout_marginTop="@dimen/y_design_30px"
                        android:paddingLeft="@dimen/x_design_12px"
                        android:paddingRight="@dimen/x_design_12px"
                        android:paddingTop="@dimen/y_design_12px"
                        android:paddingBottom="@dimen/y_design_12px"

                        android:text="扫码登陆" />

                    <Button
                        android:id="@+id/btn_manual_login"
                        style="@style/login_infor_bt"
                        android:layout_marginTop="@dimen/y_design_30px"
                        android:padding="@dimen/design_12px"
                        android:text="手动登陆" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_login_staus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        style="@style/login_infor_text_one"
                        android:paddingTop="@dimen/y_design_10px"
                        android:text="已登陆" />

                    <TextView
                        android:id="@+id/tv_worker_name"
                        style="@style/login_infor_text_one"
                        android:paddingTop="@dimen/y_design_10px"
                        tools:text="姓名:张三" />

                    <TextView
                        android:id="@+id/tv_worker_number"
                        style="@style/login_infor_text_one"
                        android:paddingTop="@dimen/y_design_10px"
                        tools:text="工号:121212" />

                    <TextView
                        style="@style/login_infor_text_one"
                        android:paddingTop="@dimen/y_design_10px"
                        android:text="今日首次登陆时间"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/tv_login_time_first"
                        style="@style/login_infor_text_one"
                        android:paddingTop="@dimen/y_design_5px"
                        android:textSize="@dimen/text_design_20px"
                        tools:text="2017.11.11 10:30" />

                    <TextView
                        style="@style/login_infor_text_one"
                        android:paddingTop="@dimen/y_design_10px"
                        android:text="最近一次登陆时间"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/tv_login_time_last"
                        style="@style/login_infor_text_one"
                        android:paddingTop="@dimen/y_design_5px"
                        android:textSize="@dimen/text_design_20px"
                        tools:text="2017.11.11 10:30" />

                    <Button
                        android:id="@+id/btn_quit"
                        android:layout_width="@dimen/design_130px"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/y_design_20px"
                        android:background="@drawable/btn_main_login"
                        android:padding="@dimen/design_8px"
                        android:text="退出"
                        android:textColor="#fff"
                        android:textSize="@dimen/f_work_font_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_worker_name_current"
                        style="@style/login_infor_text_one"
                        android:paddingTop="@dimen/y_design_10px"
                        tools:text="姓名:张三"
                        android:layout_gravity="center_horizontal"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycle_woker_photo"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/y_design_145px"
                        android:overScrollMode="never"
                        android:paddingTop="@dimen/y_design_30px">

                    </android.support.v7.widget.RecyclerView>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/y_design_40px"
                        android:paddingLeft="@dimen/x_design_10px"
                        android:paddingRight="@dimen/x_design_10px">

                        <Button
                            android:id="@+id/btn_login_two"
                            android:layout_width="@dimen/x_design_150px"
                            android:layout_height="@dimen/y_design_80px"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/y_design_20px"
                            android:background="@drawable/btn_main_login"
                            android:paddingLeft="@dimen/x_design_8px"
                            android:paddingRight="@dimen/x_design_8px"
                            android:paddingTop="@dimen/y_design_8px"
                            android:paddingBottom="@dimen/y_design_8px"
                            android:text="登入"
                            android:textColor="#fff"
                            android:textSize="@dimen/text_design_35px" />

                        <Button
                            android:id="@+id/btn_quit_two"
                            android:layout_width="@dimen/x_design_150px"
                            android:layout_height="@dimen/y_design_80px"
                            android:layout_alignParentRight="true"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/y_design_20px"
                            android:background="@drawable/btn_main_login"
                            android:paddingLeft="@dimen/x_design_8px"
                            android:paddingRight="@dimen/x_design_8px"
                            android:paddingTop="@dimen/y_design_8px"
                            android:paddingBottom="@dimen/y_design_8px"
                            android:text="退出"
                            android:textColor="#fff"
                            android:textSize="@dimen/text_design_35px" />
                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x_design_20px"
            android:layout_weight="0.9"
            android:background="@drawable/bg_share_work_list">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/RecyclerTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/toolbar_received_title"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_reciver_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/x_design_20px"
                android:text="收料"
                android:textColor="@color/color_reciver"
                android:textSize="@dimen/text_design_50px"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/frame_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/toolbar_title"
                android:paddingTop="@dimen/y_design_10px">

                <TextView
                    android:id="@+id/tv_main_task_null"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/st_main_no_work"
                    android:textColor="@color/c_main_hint_color"
                    android:textSize="@dimen/text_design_20px"
                    android:visibility="gone" />


            </FrameLayout>

        </RelativeLayout>


    </LinearLayout>
</LinearLayout>

